--- a/src/mixins/header.pug
+++ b/src/mixins/header.pug
@@ -1,10 +1,11 @@
-mixin header(data)
+mixin header(data, environment)
   -
     const logoData = data.business.logo.default;
     const logoSrc = logoData.aliasedUrl ? require(logoData.aliasedUrl) : logoData.absoluteUrl;
+    const logoTargetUrl = environment.urls.home;
   header(class='sticky z-10 flex flex-nowrap justify-between items-center top-0 left-0 right-0 h-header shadow border-t-2 border-slate-900 bg-slate-100 dark:bg-slate-600')
     a(class='block mx-4'
-    href=data.site.url)
+    href=logoTargetUrl)
       img(class='h-full'
       src=logoSrc
       alt=data.business.name)
