fix: issues with breaking changes of pug-plugin
change plugin api to match
load global data into templates through webpack config
  environment file had to change back to js
  because webpack configuration can't parse typescript
  tsconfig allowJs set to true so that client-side can still parse it

--- a/src/views/index.example.pug
+++ b/src/views/index.example.pug
@@ -8,10 +8,8 @@ include ../mixins/footer.pug
 include ../mixins/header.pug
 include ../mixins/icon.pug
 -
-  const data = require('../data.json');
-  const environment = require('../environment.ts');
   const pageMetadata = {
-    url: `${data.site.url}/index.html`,
+    url: environment.urls.home,
     title: `${data.business.name} - Inicio`,
     description: '',
     image: data.business.logo.default.absoluteUrl
