--- a/src/mixins/header.pug
+++ b/src/mixins/header.pug
@@ -1,6 +1,6 @@
-mixin header(data, environment)
+mixin header(environment, site, business)
   -
-    const logoData = data.business.logo.default;
+    const logoData = business.logo.default;
     const logoSrc = logoData.aliasedUrl ? require(logoData.aliasedUrl) : logoData.absoluteUrl;
     const logoTargetUrl = environment.urls.home;
   header(class='sticky z-10 top-0 left-0 right-0 shadow border-t-2 border-slate-900 bg-slate-100 dark:bg-slate-600')
@@ -10,8 +10,8 @@ mixin header(data, environment)
         href=logoTargetUrl)
           img(class='inline h-full'
           src=logoSrc
-          alt=data.business.name)
+          alt=business.name)
       nav(class='basis-full md:basis-auto grid items-center place-content-center py-2 px-4 md:grid-flow-col')
-        each n in data.site.navigation.links
+        each n in site.navigation.links
           a(class='font-bold uppercase text-black sm:my-0 sm:mx-4 sm:w-auto dark:text-white'
           href=n.url)=n.title
