--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,16 +9,15 @@ include ../mixins/header.pug
 include ../mixins/icon.pug
 
 -
-  const data = require('../data.json');
   const pageMetadata = {
     url: environment.urls.home,
-    title: `${data.business.name} - Home`,
+    title: `${business.name} - Home`,
     description: '',
-    image: data.business.logo.default.absoluteUrl
+    image: business.logo.default.absoluteUrl
   };
 
 doctype html
-html(lang=data.site.locale)
+html(lang=site.locale)
   head
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
@@ -44,7 +43,7 @@ html(lang=data.site.locale)
 
   body(class='bg-slate-100 dark:bg-slate-800 dark:text-white')
     h1(class='hidden')=pageTitle
-    +header(data, environment)
+    +header(environment, site, business)
     section#facade(class='bg-slate-200 dark:bg-slate-700')
       .container(class='grid grid-cols-1 content-center justify-items-center max-w-screen-xl mx-auto md:min-h-fullscreen')
         .splide(class='my-16 md:mx-16' aria-label='Carrusel de ejemplo')
@@ -61,7 +60,7 @@ html(lang=data.site.locale)
       .container(class='grid grid-cols-1 gap-4 justify-items-center max-w-screen-xl mx-auto md:gap-6')
         h2(class='mt-16') Services
         .grid(class='gap-2 grid-cols-2 justify-items-center content-center mb-16 px-2 md:grid-cols-3 lg:grid-cols-none lg:grid-flow-col md:gap-4 md:px-4')
-          each service, serviceClassName in data.business.services
+          each service, serviceClassName in business.services
             - const thumbSrc = service.thumb.aliasedUrl ? require(service.thumb.aliasedUrl) : service.thumb.absoluteUrl;
             .card(class='shadow rounded bg-slate-700 ' + serviceClassName)
               h3(class='text-center my-2')=service.name
@@ -71,7 +70,7 @@ html(lang=data.site.locale)
     section#about(class='bg-slate-200 dark:bg-slate-700')
       .container(class='grid grid-cols-1 gap-4 justify-items-center max-w-screen-lg mx-auto md:gap-6')
         .grid(class='gap-4 justify-items-center content-center px-4 my-16 md:grid-flow-col')
-          each node, nodeClassName in data.business.about
+          each node, nodeClassName in business.about
             .card(class='grid gap-4 place-content-center p-8 shadow rounded bg-white dark:bg-slate-800 ' + nodeClassName)
               +icon(node.icon)(class='w-8 mx-auto dark:invert sm:w-12')
               h2(class='text-center')=node.title
@@ -84,10 +83,10 @@ html(lang=data.site.locale)
         +contact-form()(class='mb-16')
     section#storage(class='bg-slate-200 dark:bg-slate-700')
       .container(class='grid grid-cols-1 gap-4 justify-items-center max-w-screen-lg mx-auto md:gap-6')
-        h2(class='mt-16')=data.site.extensions.google.drive[0].title
-        +google-drive-embed(data.site.extensions.google.drive[0])(class='h-40 w-5/6 mb-16 md:h-64')
+        h2(class='mt-16')=site.extensions.google.drive[0].title
+        +google-drive-embed(site.extensions.google.drive[0])(class='h-40 w-5/6 mb-16 md:h-64')
     section#location
       .container(class='grid grid-cols-1 gap-4 justify-items-center max-w-screen-lg mx-auto md:gap-6')
-        h2(class='mt-16')=data.site.extensions.google.maps[0].title
-        +google-maps-embed(data.site.extensions.google.maps[0])(class='h-40 w-5/6 mb-16 md:h-64')
-    +footer(data)
+        h2(class='mt-16')=site.extensions.google.maps[0].title
+        +google-maps-embed(site.extensions.google.maps[0])(class='h-40 w-5/6 mb-16 md:h-64')
+    +footer(business)
