style(pug): avoid implicit `div`s
explicitly use `div` elements instead of bare classnames such as `.email` that imply the `div`

for anyone who isn't a pug enthusiast, this is easier to read as HTML

--- a/src/mixins/extensions/google-drive-embed.pug
+++ b/src/mixins/extensions/google-drive-embed.pug
@@ -2,7 +2,7 @@ mixin google-drive-embed(instanceData)
   if (instanceData.usage === 'iframe-embed')
     -
       const gdriveUrl = (id) => `https://drive.google.com/embeddedfolderview?id=${id}#grid`;
-    .grive(class!=attributes.class)
+    div.grive(class!=attributes.class)
       iframe(src!=gdriveUrl(instanceData.queryParams.id)
         title=instanceData.title
         frameborder='0'
