--- a/src/mixins/contact-form.pug
+++ b/src/mixins/contact-form.pug
@@ -2,7 +2,7 @@ mixin contact-form()
   -
     const mixinClass = attributes.class ? ` ${attributes.class}` : '';
   form(class='grid grid-cols-1 gap-4 justify-items-stretch md:w-full md:grid-cols-12' + mixinClass)
-    .fullname(class='flex flex-col w-full text-left md:row-start-1 md:col-span-12')
+    div.fullname(class='flex flex-col w-full text-left md:row-start-1 md:col-span-12')
       label(class='flex-shrink-0 w-full mb-2'
       for='fullname-input') Nombre completo *
       input#fullname-input.form-control(required
@@ -11,7 +11,7 @@ mixin contact-form()
       name='fullname'
       maxlength='80'
       placeholder='Maximiliano Fabian Carrera')
-    .email(class='flex flex-col w-full text-left md:row-start-2 md:col-span-8')
+    div.email(class='flex flex-col w-full text-left md:row-start-2 md:col-span-8')
       label(class='flex-shrink-0 w-full mb-2'
       for='email-input') E-Mail *
       input#email-input.form-control(required
@@ -20,7 +20,7 @@ mixin contact-form()
       name='email'
       maxlength='60'
       placeholder='maxcarrera@ejemplo.com')
-    .phone(class='flex flex-col w-full text-left md:row-start-2 md:col-span-4')
+    div.phone(class='flex flex-col w-full text-left md:row-start-2 md:col-span-4')
       label(class='flex-shrink-0 w-full mb-2'
       for='phone-input') Nro. teléfono
       input#phone-input.form-control(
@@ -30,7 +30,7 @@ mixin contact-form()
       minlength='9'
       maxlength='9'
       placeholder='+569 XXXX XXXX / 2 XXXX XXXX')
-    .comments(class='flex flex-col w-full text-left md:row-start-3 md:col-span-12')
+    div.comments(class='flex flex-col w-full text-left md:row-start-3 md:col-span-12')
       label(class='flex-shrink-0 w-full mb-2'
       for='comments-input') Mensaje *
       textarea#comments-input.form-control(required
@@ -39,7 +39,7 @@ mixin contact-form()
       rows='5'
       maxlength='2000'
       placeholder='Cuéntanos qué es lo que necesitas')
-    .actions(class='text-center md:row-start-4 md:col-span-12')
+    div.actions(class='text-center md:row-start-4 md:col-span-12')
       p(class='italic mb-3') Los campos marcados con un asterisco (*) son obligatorios.
       button(type='submit'
       class='py-2 px-8 rounded bg-blue-600 hover:bg-blue-500 active:bg-blue-700 text-white') Quiero que me contacten
