--- a/src/mixins/header.pug
+++ b/src/mixins/header.pug
@@ -4,8 +4,8 @@ mixin header(environment, site, business)
     const logoSrc = logoData.aliasedUrl ? require(logoData.aliasedUrl) : logoData.absoluteUrl;
     const logoTargetUrl = environment.urls.home;
   header(class='sticky z-10 top-0 left-0 right-0 shadow border-t-2 border-slate-900 bg-slate-100 dark:bg-slate-600')
-    .container(class='flex flex-wrap max-w-screen-xl mx-auto md:flex-nowrap md:justify-between md:items-center')
-      .upper(class='basis-full md:basis-auto')
+    div.container(class='flex flex-wrap max-w-screen-xl mx-auto md:flex-nowrap md:justify-between md:items-center')
+      div.upper(class='basis-full md:basis-auto')
         a.logo(class='inline-block mx-auto py-2 px-4 text-center md:ml-0'
         href=logoTargetUrl)
           img(class='inline h-full'
